%%{init: { 
    'theme': 'dark', 
    'themeVariables': { 
        'background': '#121212', 
        'lineColor': '#a5d7f7', 
        'fontFamily': 'Cascadia Code, Fira Code, Consolas, Courier New, monospace', 
        'fontSize': '14px' 
    },
    'themeCSS': 'path { stroke-width: 1.5px !important; }'
} }%%

classDiagram

class Document {
    - id: number
    - issueDate: Date
    - body: string
    - responsible: string
}

class Escrito {
    - legajo: number
    - erogacion: Date
    - cuerpo: string
    - autor: string
}

class DocumentoExterno {
    - expediente: number
    - lanzamiento: Date
    - contenido: string
    - nombre: string
}

class Ley {
    - folio: number
    - emision: Date
    - desarrollo: string
    - firmante: string
}

class DocumentAdapter {
    + convertir(origen)Document
}

class DocumentService {
    + evaluar(documentos: List~Document~)void
}

DocumentAdapter --> Document
DocumentService --> Document

DocumentAdapter --> Escrito
DocumentAdapter --> DocumentoExterno
DocumentAdapter --> Ley

classDef default fill:#362b2b,stroke:#f39bce,color:#e4dcd2